--- a/vue2/package.json
+++ b/vue2/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "iview": "^3.5.4",
     "less-loader": "^10.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
